@@ -13,6 +13,7 @@
 	* Fixed issue #13141: Can't use devLog when an exception involing tx_solr_query is logged, credits Pierrick Caillon
 	* Fixed issue #10665, changed handling of multiple word queries, escpaes phrases only when quotes are found at the beginning and end of a query
 	* Added support for boost query bq parameter
+	* Fixed issue #9971: suggest ignores search.filter
 
 2011-02-21  Ingo Renner  <ingo.renner@dkd.de>
 
